[tool.poetry]
name = "repl_python3_simple-Discord-bot"
version = "0.1.0"
description = ""
authors = ["wheelercj <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.1"
replit = "^3.1.0"
youtube-dl = "^2021.5.16"
discord = "^1.0.1"
PyNaCl = "^1.4.0"
dateparser = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
